<resources>
    <string name="app_name">GainTracker</string>
    <string name="mainTitle">GainTracker</string>
    <string name="startButton">Rozpocznij trening</string>
    <string name="previewButton">Podgląd wyników</string>
    <string name="settingsButton">Ustawienia</string>
    <string name="testText">To są ustawienia testowe!</string>
    <string name="backButton">Powrót</string>
    <string name="preview_destricption">Nazwa ćwiczenia   -    l.serii    -    l.powtórzeń    -    ciężar</string>

    <!--activity_start strings -->

    <string name="exercise_name">Nazwa ćwiczenia:</string>
    <string name="sets">Liczba serii:</string>
    <string name="reps">Liczba powtórzeń:</string>
    <string name="weight">Ciężar:</string>
    <string name="exercise_name_tint">np. martwy ciąg</string>
    <string name="sets_tint">np. 4</string>
    <string name="reps_tint">np. 12</string>
    <string name="weight_tint">np. 50kg</string>
    <string name="next_exercise">Następne ćwiczenie</string>
    <string name="end_training">Zakończ trening</string>


    <!--Poniższe dane są testowe potrzebne do prezentacji działania recyclerviewera-->

    <string-array name="exercises">
        <item>Wyciskanie sztangi</item>
        <item>Martwy ciag</item>
        <item>Przysiad ze sztanga</item>
    </string-array>

    <string-array name="results">
        <item>4 – 12 – 40</item>
        <item>4 – 12 – 60</item>
        <item>4 – 12 – 50</item>
    </string-array>

    <string-array name="dates">
        <item>Poniedziałek - 08.05.2023</item>
        <item>Środa - 10.05.2023</item>
        <item>Piątek - 12.05.2023</item>
    </string-array>



</resources>